--- a/Alcaldia/src/main/resources/application.properties
+++ b/Alcaldia/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=Alcaldia
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/alcaldia?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=102006
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.open-in-view=false
